[project]
name = "tooty"
description = "A sphinx theme with accessibility in mind."
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4",
    "sphinx ~= 4.0",
    "pygments ~= 2.7",
]

license = { file = "LICENSE"}
authors = [
    {name = "Oliver Wilkes"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Plugins",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]

[project.entry-points]
"sphinx.html_themes" = {tooty = "tooty"}
